--- a/pop3filter/Makefile.inc
+++ b/pop3filter/Makefile.inc
@@ -1,2 +1,2 @@
 GCC = gcc
-GCCFLAGS = -Wall -pedantic -std=c99
+GCCFLAGS = --std=c99 -pedantic -pedantic-errors -Wall -Wextra -Werror -Wno-unused-parameter -Wno-implicit-fallthrough -D_POSIX_C_SOURCE=200112L -pthread
