--- a/management/Makefile
+++ b/management/Makefile
@@ -1,4 +1,22 @@
 include Makefile.inc
-all:
+SOURCES = $(wildcard *.c)
+OBJECTS = $(SOURCES:.c=.o)
+DEPS = $(wildcard include/*.h)
+MANAGEMENT = management
 
-clean:
+fromzero: clean all
+
+all: $(MANAGEMENT)
+
+%.o: %.c $(DEPS)
+	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@  
+
+
+$(MANAGEMENT): $(DEPS) $(OBJECTS)
+	$(GCC) -o $@ $(SOURCES) -I./include $(GCCFLAGS)
+
+
+clean: 
+	rm -rf *.o $(MANAGEMENT)
+
+.PHONY: all clean
