Change directory name

--- a/stripmime/Makefile
+++ b/stripmime/Makefile
@@ -2,21 +2,21 @@ include Makefile.inc
 SOURCES = $(wildcard *.c)
 OBJECTS = $(SOURCES:.c=.o)
 DEPS = $(wildcard include/*.h)
-MEDIATYPESFILTER = mediatypesfilter
+STRIPMIME = stripmime
 
 fromzero: clean all
 
-all: $(MEDIATYPESFILTER)
+all: $(STRIPMIME)
 
 %.o: %.c $(DEPS)
 	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@  
 
 
-$(MEDIATYPESFILTER): $(DEPS) $(OBJECTS)
+$(STRIPMIME): $(DEPS) $(OBJECTS)
 	$(GCC) -o $@ $(SOURCES) -I./include $(GCCFLAGS)
 
 
 clean: 
-	rm -rf *.o $(MEDIATYPESFILTER)
+	rm -rf *.o $(STRIPMIME)
 
 .PHONY: all clean
